feat/app (#15)
* feat: introduce trigger and tasks to create slack application

* chore: avoid the fixed port on test

* feat: add conversations & files tasks

* feat: add users tasks

* feat: add missing reactions get

* feat: use typed instant for date

* feat: add missing documentation

* feat: introduce canvas method

* feat: introduce stream chat tasks

* fix: adapt from trigger changes on the core

* fix: invalid doc examples

* feat: add sanitychecks

* fix: core version

* Change channel type from 'public_channel' to 'PUBLIC_CHANNEL'

* fix(access-set): userids and channelIds

* fix(unarchive): imrove docs

* fix(docs): enhance descriptions for Slack conversation tasks

* docs(slack-app): update docs

* Update AbstractSlackClientConnection.java

* chore(slack-app): add subpackage metadata and package-info

* test(slack): replace get(0) with getFirst()

* docs(slack-app): update metadata

* chore: bump kestraVersion to 1.3.0

---------

Co-authored-by: Malay Dewangan <66718045+Malaydewangan09@users.noreply.github.com>
Co-authored-by: Malay Dewangan <malaydewangan310@gmail.com>
Co-authored-by: Pradumna Saraf <pradumnasaraf@gmail.com>
Co-authored-by: AJ Emerich <aj-emerich@proton.me>
Co-authored-by: François Delbrayelle <fdelbrayelle@kestra.io>